# batfish_trans

projects/trans/src/main/java/org/batfish/trans/: Trans.java
projects/trans/src/main/java/org/batfish/trans/vendortrans/: Cisco2Juniper.java
projects/trans/src/test/java/org/batfish/trans/: BUILD.bazel  TransTest.java
projects/trans/src/test/resources/org/batfish/trans/filetrans/: BUILD.bazel
projects/trans/src/test/resources/org/batfish/trans/policytrans/: as2dept1_cisco.cfg  as2dept1_juniper.cfg  cisco  huawei.cfg  juniper.cfg
